# playerdemo

./: CMakeLists.txt
src/: CustomSlider.cpp  CustomSlider.h  mainwid.cpp  title.cpp
